PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/ITSM__c.object-meta.xml
<CustomObject>
    <description>Customer Portal 유지보수계약시 개발요청서</description>
    <label>Requirement</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>접수 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>