PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <label>요청자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>