PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDate__c</fullName>
    <label>접수 일자</label>
    <required>true</required>
    <type>Date</type>
</CustomField>