PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <label>처리종료일</label>
    <type>Date</type>
</CustomField>