PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/CompeletCheck__c.field-meta.xml
<CustomField>
    <fullName>CompeletCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>고객확인용</description>
    <inlineHelpText>등록된 Requirement 의 최종 완료여부를 고객의 검토 후 완료 여부를 확정하는 필드 입니다.</inlineHelpText>
    <label>완료확인</label>
    <type>Checkbox</type>
</CustomField>