PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>접수 내용</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>