PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/Duedate__c.field-meta.xml
<CustomField>
    <fullName>Duedate__c</fullName>
    <label>처리목표일</label>
    <type>Date</type>
</CustomField>