PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <inlineHelpText>이메일 입력시 진행결과 (확인/완료 단계) 에 대한 이메일 알림을 받을 수 있습니다.</inlineHelpText>
    <label>이메일</label>
    <type>Email</type>
</CustomField>