PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/fm_Account__c.field-meta.xml
<CustomField>
    <fullName>fm_Account__c</fullName>
    <formula>Project__r.Contract__r.Account__r.Name</formula>
    <inlineHelpText>프로젝트의 고객사명</inlineHelpText>
    <label>고객사</label>
    <type>Text</type>
</CustomField>