PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/fm_IsServiceContract__c.field-meta.xml
<CustomField>
    <fullName>fm_IsServiceContract__c</fullName>
    <formula>Project__r.IsServiceContract__c</formula>
    <label>유지보수계약여부</label>
    <type>Checkbox</type>
</CustomField>