PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/fm_RequestType__c.field-meta.xml
<CustomField>
    <fullName>fm_RequestType__c</fullName>
    <formula>IF ( INCLUDES ( RequestType__c, &quot;하자&quot; ), &quot;하자&quot;,null )</formula>
    <label>요청 유형(개발)</label>
    <type>Text</type>
</CustomField>