PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/fmRecepitDate__c.field-meta.xml
<CustomField>
    <fullName>fmRecepitDate__c</fullName>
    <formula>text(ApplicationDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fmRecepitDate</label>
    <type>Text</type>
</CustomField>