PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/fmRequestTypeText__c.field-meta.xml
<CustomField>
    <fullName>fmRequestTypeText__c</fullName>
    <formula>IF( INCLUDES(RequestType__c , &quot;하자&quot;) , &quot;하자; &quot;, null) &amp;
IF( INCLUDES(RequestType__c , &quot;기능 개선&quot;) , &quot;기능 개선; &quot;, null)&amp;
IF( INCLUDES(RequestType__c , &quot;UI/UX 개선&quot;) , &quot;UI/UX 개선; &quot;, null)&amp;
IF( INCLUDES(RequestType__c , &quot;마이그레이션&quot;) , &quot;마이그레이션; &quot;, null)&amp;
IF( INCLUDES(RequestType__c , &quot;데이터 추출&quot;) , &quot;데이터 추출; &quot;, null)&amp;
IF( INCLUDES(RequestType__c , &quot;계정 및 권한&quot;) , &quot;계정 및 권한; &quot;, null)&amp;
IF( INCLUDES(RequestType__c , &quot;리포트 &amp; 대시보드&quot;) , &quot;리포트 &amp; 대시보드; &quot;, null)&amp;
IF( INCLUDES(RequestType__c , &quot;문의&quot;) , &quot;문의; &quot;, null)&amp;
IF( INCLUDES(RequestType__c , &quot;기타&quot;) , &quot;기타&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fmRequestTypeText</label>
    <type>Text</type>
</CustomField>