PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/MethodType__c.field-meta.xml
<CustomField>
    <fullName>MethodType__c</fullName>
    <label>처리 방향</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>유지보수개발팀</fullName>
            </value>
            <value>
                <fullName>시스템관리자</fullName>
            </value>
            <value>
                <fullName>장기미결</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>