PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/RelatedArea__c.field-meta.xml
<CustomField>
    <fullName>RelatedArea__c</fullName>
    <label>관련시스템</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>Pardot</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>Relay Server</fullName>
            </value>
            <value>
                <fullName>3rd Party Solution</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>