PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>요청 유형</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>하자</fullName>
            </value>
            <value>
                <fullName>기능 개선</fullName>
            </value>
            <value>
                <fullName>UI/UX 개선</fullName>
            </value>
            <value>
                <fullName>마이그레이션</fullName>
            </value>
            <value>
                <fullName>데이터 추출</fullName>
            </value>
            <value>
                <fullName>계정 및 권한</fullName>
            </value>
            <value>
                <fullName>리포트 &amp; 대시보드</fullName>
            </value>
            <value>
                <fullName>문의</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>