PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/Resolve__c.field-meta.xml
<CustomField>
    <fullName>Resolve__c</fullName>
    <label>조치사항</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>