PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/ServiceRep__c.field-meta.xml
<CustomField>
    <fullName>ServiceRep__c</fullName>
    <label>처리담당자</label>
    <length>255</length>
    <type>Text</type>
</CustomField>