PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>처리 상태</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>접수</fullName>
                <default>true</default>
                <label>접수</label>
            </value>
            <value>
                <fullName>취소</fullName>
            </value>
            <value>
                <fullName>처리중</fullName>
            </value>
            <value>
                <fullName>확인</fullName>
            </value>
            <value>
                <fullName>완료</fullName>
            </value>
            <value>
                <fullName>테스트</fullName>
                <isActive>false</isActive>
                <label>테스트</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>