PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/TimeTaken__c.field-meta.xml
<CustomField>
    <fullName>TimeTaken__c</fullName>
    <inlineHelpText>고객 요건 접수 후 유지보수 PM 과 담당자의 의견을 반영한 작업 완료의 실제 소요시간 입니다.</inlineHelpText>
    <label>실제처리시간</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>