PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>접수 제목</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>