PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/validationRules/NotStatusChange.validationRule-meta.xml
<ValidationRule>
    <fullName>NotStatusChange</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &apos;완료&apos;),NOT(ISCHANGED(Status__c)) )</errorConditionFormula>
    <errorMessage>처리 상태가 완료일 경우 수정할 수 없습니다.</errorMessage>
</ValidationRule>