PA_Education/TestMenifest/force-app/main/default/objects/ITSM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>ApplicationDate__c</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>TimeTaken__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>